--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="{{ url_for('index') }}">Dashboard</a></li>
                     <li><a href="{{ url_for('posts_list') }}">Posts</a></li>
+                    <li><a href="{{ url_for('pages_list') }}">Pages</a></li>
                     <li><a href="{{ url_for('upload_file') }}">Upload XML</a></li>
                     <li><a href="{{ url_for('authors_list') }}">Authors</a></li>
                     <li><a href="{{ url_for('categories_list') }}">Categories</a></li>
@@ -41,7 +42,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 WordPress Extractor</p>
+            <p>&copy; 2026 WordPress Extractor</p>
         </div>
     </footer>
 </body>
